fixed dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body.active{
 }
 
 .card {
-    background-color: var(--bg-color);
+    background-color: var(--bg-color) !important;
     box-shadow: var(--box-shadow);
 }
 
